# truth-table-genie

./: .README.md.swp  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cmd_line/: generate_template.py  ttg_parser.py
examples/: sample.csv  sample.xlsx
hello/: model_decision_tree_OUT.pkl  report_decision_tree_OUT.txt  sample_duplicates.csv  sample_elab_no_duplicates.csv
hello_1/: sample_predict_all.csv
parser/: ttg_parser.py
src/digital_designer_genie/: ttg.py
src/digital_designer_genie/ops/: df_utils.py
src/digitial_designer_genie/: ttg.py
src/val_ai/: ttg.py
src/val_ai/models/: classifier.py  explainability.py
src/val_ai/ops/: df_utils.py  log_utils.py
tests/: test1_elaborate.py  test2_analysis.py  test3_analysis_predict.py  test4_template.py  test_elaborate.py  test_setup.py
tests/files/: .~lock.sample.xlsx#  dataset.xlsx
